@@ -1,3 +1,7 @@
+2002-03-25  Jeff Sturm  <jsturm@one-point.com>
+
+	* linux_threads.c (GC_get_nprocs): Close file descriptor.
+
 2002-03-21  Loren J. Rittle  <ljrittle@acm.org>
 
 	* include/private/gcconfig.h: Add unified test for FreeBSD.
